# scx-switcher

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build-deb.sh  build.sh  install.sh  uninstall.sh  update.sh
data/: debforge-scx.desktop  debforge-scx.metainfo.xml  scx-switcher.desktop  scx-switcher.metainfo.xml
debian/: changelog  control  copyright
libexec/scx-switcher/: toggle-autostart  write-config
policies/: com.debforge.scx.policy  com.scx-switcher.policy  io.github.hmwassim.scx_switcher.policy
src/: appcontroller.cpp  appcontroller.h  config.h  control_tab.cpp  control_tab.h  controltab.cpp  controltab.h  main.cpp  mainwindow.cpp  mainwindow.h  priv_ops.cpp  priv_ops.h  privops.cpp  privops.h  processrunner.cpp  processrunner.h  schedcatalog.cpp  schedcatalog.h  schedulercontroller.cpp  schedulercontroller.h  scx_utils.cpp  scx_utils.h  scxutils.cpp  scxutils.h
